# the-cpp-book

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  README.md
.cache/clangd/index/: adder.cpp.C174A1FB45354BFB.idx  adder.hpp.90C351B54A48DEA5.idx  adder_app.cpp.E2BD977C46DC2490.idx  adder_t.cpp.4239644152E044A3.idx  catch.hpp.09A95269D1FBFD6A.idx  guessing_game_app.cpp.59C9BCFF1A317D36.idx  guessing_game_app.cpp.B3343ACD1233C127.idx  hello_world_app.cpp.91F3469B5F5BF525.idx  map_app.cpp.265764531698261A.idx  span_app.cpp.4C01F565431DC111.idx  string_app.cpp.FB2E42B61F609FA2.idx  string_view_app.cpp.62D732591028C341.idx  tests.cpp.5E0DB58079408D5D.idx  vector_app.cpp.8AA6BEE9E3A74F48.idx
app/: CMakeLists.txt  adder_app.cpp  finished_guessing_game_app.cpp  functions_app.cpp  primitive_types_app.cpp
app/part0/ch05.programming_a_guessing_game/: guessing_game_app.cpp
app/part1/ch03.common_containers/: map_app.cpp  span_app.cpp  string_app.cpp  string_view_app.cpp  vector_app.cpp
include/adder/: adder.hpp
the_book/: README.md  part0_01.introduction.md  part0_02.setting_up_your_environment.md  part0_03.hello_world.md  part0_04.hello_cmake.md  part0_05.programming_a_guessing_game.md  part1_00.common_programming_concepts.md  part1_01.variables_and_data_types.md  part1_02.functions_and_control_flow.md  part1_03.common_containers.md  part1_04.common_algorithms.md
the_book/notes/: guessing_game.md  primitive_types.md
