# add_executable(adder_app adder_app.cpp)
# target_link_libraries(adder_app PRIVATE adder)

# add_executable(hello_world_app hello_world_app.cpp)

# add_executable(guessing_game_app ./part0/ch05.programming_a_guessing_game/guessing_game_app.cpp)

# add_executable(vector_app ./part1/ch03.common_containers/vector_app.cpp)
# add_executable(span_app ./part1/ch03.common_containers/span_app.cpp)
# add_executable(string_app ./part1/ch03.common_containers/string_app.cpp)
# add_executable(string_view_app ./part1/ch03.common_containers/string_view_app.cpp)
add_executable(map_app ./part1/ch03.common_containers/map_app.cpp)
